# Analyrics

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: config.py  database.py  main.py
src/analitic/: dependencies.py  kafka_consumer.py  schema.py  service.py
src/analitics/: dependencies.py  kafka_consumer.py  router.py  schema.py  service.py
src/analytics/: dependencies.py  exceptions.py  kafka_consumer.py  router.py  schema.py  service.py
