[tool.poetry]
name = "analytics-service"
version = "0.1.0"
description = ""
authors = ["Dmitriy <pilevichdima20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
motor = "^3.6.1"
pydantic = "^2.10.5"
aiokafka = "^0.12.0"
pydantic-settings = "^2.7.1"
pre-commit = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
